# todo-cli

./: .gitignore  cli.py  cli.spec  installer.bash  pyproject.toml
todo/: __main__.py  api.py  commands.py  todos.csv
